# llmdebug

./: .gitignore  2026-01-27-llmdebug-bootstrap.md  2026-01-27-llmdebug-design.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/llmdebug/: __init__.py  capture.py  config.py  output.py  pytest_plugin.py  serialize.py
tests/: test_capture.py  test_output.py  test_pytest_plugin.py  test_serialize.py
