[project]
name = "llmdebug"
version = "0.1.4"
description = "Structured debug snapshots for LLM-assisted debugging"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicolas Schuler", email = "schuler.nicolas@proton.me" }]
keywords = ["debugging", "llm", "crash-reporting", "pytest"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Framework :: Pytest",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
    "ruff>=0.1",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://github.com/NicolasSchuler/llmdebug"
Repository = "https://github.com/NicolasSchuler/llmdebug"

[project.entry-points.pytest11]
llmdebug = "llmdebug.pytest_plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = [".venv", ".venv*/"]

[tool.hatch.build.targets.wheel]
packages = ["src/llmdebug"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.10"
typeCheckingMode = "standard"
